# projeto_streamlit

./: README.md  cadastro.py  clientes.csv  consultas.py  pyproject.toml  requirements.txt
