[project]
name = "projeto-pratico"
version = "0.1.0"
description = ""
authors = [
    {name = "Lindomar Ribeiro"}
]
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.55.0,<2.0.0)",
    "pandas (>=2,<3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
